--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <meta name="theme-color" content="#000000" />
-  <meta name="author" content="Sahib Singh">
-  <meta name="keywords" content="Sahib Singh, reactjs, ecommerce, react ecommerce website, ecommerce website, sahibsingh.vercel.app">
+  <meta name="author" content="ARLA">
+  <meta name="keywords" content="reactjs, ecommerce, react ecommerce website, ecommerce website">
   <!-- Primary Meta Tags -->
-  <title>Ecommerce Website</title>
+  <title>arLa | Productos Argentinos</title>
   <meta name="title" content="Ecommerce Website">
   <meta name="description" content="A Ecommerce Website made with React.js Framework.">
 
